--- a/index.html
+++ b/index.html
@@ -2,21 +2,75 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Aedan Vongsouthi">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<div class="flex-container">
+    <div class="nav-flex-container" style="background-color: #c5c2c2;">
 
-        <div> Aedan Vongsouthi Programmer/Writer </div>
+        <div> Aedan Vongsouthi (Programmer/Writer)</div>
         <div><a href="#aboutme">About Me</a></div>
         <div><a href="#certifications">Certifications</a></div>
         <div><a href="#projects">Projects</a></div>
         <div><a href="#FIRSTrobotics">FIRST Robotics</a></div>
         <div><a href="#contactinformation/resume">Contact Information/Resume</a></div>
- 
-</div>
+    
+    </div>
+
+    <div class="info-flex-container">
+
+        <div style="flex-grow: 10; text-align: center;"> <h1> About Me </h1> </div>
+        <div style="flex-grow: 7; text-align: center; text-decoration: underline; text-decoration-color: aliceblue;"> <h2> For as long as I can remember, I have always wanted to create. </h2> </div>
+
+    </div>
+
+    <div class="info-flex-container">
+
+        <div style=""> <img src="images/pablo.png" alt="Me at the beach"> </div>
+        <div style="text-align: left;"> 
+            <h4> 
+                    I am a very talkative person who tries my best to set the mood of the room to that of a positive one. Jumping at the opportunity whenever needed, I can lead my peers towards the goal we are trying to achieve while making sure everyone's voices are heard. <br>
+                    <br>
+                    <br>
+                    <br>
+                    I am currently a Junior in High School hoping to pursue a career in either Software Development, Game Development. Applying my programming skills hands-on from the classroom to the unique environment of FIRST Robotics, I am no stranger to the fast-paced schedules and time crunches that come with the profession. <br>
+                    <br>
+                    <br>
+                    <br>
+                    Besides my passion for programming and Computer Science, another passion of mine is creative writing. Writing many poems and stories, I hope to submit these writings to Scholastic's Art and Writing Competition this coming September. Using these skills that I have gathered and practiced over the years, if my career in the Computer Sciences ever falls through or I feel that it is just not for me, I hope to pursue a career as an Author and/or Video Game Writer.
+            </h4> 
+        </div> 
+
+    </div>
+
+    <div class="nav-flex-container" style="background-color: #c5c2c2;">
+
+        <div> Aedan Vongsouthi (Programmer/Writer)</div>
+        <div><a href="#aboutme">About Me</a></div>
+        <div><a href="#certifications">Certifications</a></div>
+        <div><a href="#projects">Projects</a></div>
+        <div><a href="#FIRSTrobotics">FIRST Robotics</a></div>
+        <div><a href="#contactinformation/resume">Contact Information/Resume</a></div>
+    
+    </div>
+
+    <div class="info-flex-container">
+
+        <div style="flex-grow: 10; text-align: center; justify-content: center;"> <h1> Certifications </h1> </div>
+
+    </div>
+
+    <div class="info-flex-container" style="justify-content: center;">
+
+        <div style="flex-basis: 102em;"> <img src="images/ic3livingonline.png" alt="IC3 Living Online Logo"> </div>
+        <div style="flex-basis: 100em;"> <img src="images/ComputingFundamentals.png" alt="IC3 Computing Fundamentals Logo"> </div>
+        <div > <img src="images/HTMLCSS.jpg" alt="HTML5 and CSS3Logo" width="350em" height="200em"> </div>
+
+    </div>
 
 </body>
 </html>
